<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/movies_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Empty view for the list -->
    <LinearLayout
        android:id="@+id/empty_view"
        android:layout_width="@dimen/no_poster_width"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/no_books_image"
            android:layout_width="@dimen/no_poster_width"
            android:layout_height="@dimen/no_poster_height"
            android:contentDescription="@string/content_description"
            android:src="@drawable/no_results_found" />
        <TextView
            style="@style/empty_view_titles"
            android:id="@+id/empty_title_text"
            android:text="@string/empty_view_title_text"
            android:textColor="@color/empty_title_font_color"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/empty_subtitle_text"
            android:text="@string/empty_view_subtitle_text"
            style="@style/empty_view_titles" />
    </LinearLayout>
</RelativeLayout>